<resources>
    <string name="app_name">LoginUsingRoom</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="enter_your_email_id">Enter your Email id</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="n">Login</string>
    <string name="password">Password</string>
    <string name="d">Login</string>
    <string name="welcome_to_home_page">Welcome to Home Page</string>
    <string name="logout">Logout</string>
</resources>