<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical">


    <TextView
        android:id="@+id/register_tv"
        android:layout_gravity="center"
        android:layout_marginTop="50sp"
        android:textStyle="bold|italic"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register to Login"
        android:textSize="32sp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/name_et"
        android:hint="@string/enter_your_name"
        android:layout_gravity="center"
        android:textSize="24sp"
        android:layout_marginTop="60sp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/email_et"
        android:hint="@string/enter_your_email_id"
        android:layout_gravity="center"
        android:textSize="24sp"
        android:layout_marginTop="30sp"/>



       <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/password_et"
        android:hint="@string/enter_your_password"
        android:layout_gravity="center"
        android:textSize="24sp"
        android:layout_marginTop="30sp"/>

          <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_btn"
            android:layout_gravity="center"
            android:textSize="24sp"
            android:layout_marginTop="30sp"
            android:text="@string/login"/>



</LinearLayout>